--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameDefaultMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode_C
+GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/Fruit_Collecting_GM.Fruit_Collecting_GM_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
