--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GameDefaultMap=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+GameDefaultMap=/Game/2DSideScrollerBP/Maps/Title.Title
 GlobalDefaultGameMode=/Game/2DSideScrollerBP/Blueprints/Fruit_Collecting_GM.Fruit_Collecting_GM_C
 GlobalDefaultServerGameMode=None
 
